unpackaged/main/default/objects/LS_VC__Visual_Calendar_Paragraph__c/LS_VC__Visual_Calendar_Paragraph__c.object-meta.xml
<CustomObject>
    <description>Represents information that appears on the Home page.</description>
    <label>Visual Calendar Paragraph</label>
    <nameField>
        <label>Paragraph Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visual Calendar Paragraphs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>