unpackaged/main/default/objects/LS_VC__Visual_Calendar_Paragraph__c/fields/LS_VC__Category__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>News</fullName>
                <default>true</default>
                <label>News</label>
            </value>
            <value>
                <fullName>Metrics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>