unpackaged/main/default/objects/LS_VC__Visual_Calendar_Paragraph__c/fields/LS_VC__Image_Name__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Image_Name__c</fullName>
    <description>The image document name. Must be a perfect match to a available document's name.</description>
    <inlineHelpText>The image document name. Must be a perfect match to a available document's name.</inlineHelpText>
    <label>Image Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>