unpackaged/main/default/objects/LS_VC__Visual_Calendar_Paragraph__c/fields/LS_VC__ImageID__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__ImageID__c</fullName>
    <label>ImageID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>