unpackaged/main/default/objects/LS_VC__Visual_Calendar_Paragraph__c/fields/LS_VC__Item_Order__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Item_Order__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number [0-99] used for ordering paragraphs.</description>
    <inlineHelpText>Number [0-99] used for ordering paragraphs.</inlineHelpText>
    <label>Item Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>