unpackaged/main/default/objects/LS_VC__Visual_Calendar_Paragraph__c/fields/LS_VC__View_Larger__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__View_Larger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox to allow Metrics images to display "View Larger" images link.</description>
    <inlineHelpText>Check this if you wish to display "View Larger" link on Metrics section of the page.</inlineHelpText>
    <label>View Larger</label>
    <type>Checkbox</type>
</CustomField>